--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CRICKET 12TH MAN – Official</title>
+<title>CRICKET-12TH-MAN</title>
 
 <!-- Meta Pixel Code -->
 <script>
@@ -15,197 +15,172 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1279574510430112');
+fbq('init', '--------------');
 fbq('track', 'PageView');
 </script>
-<noscript>
-<img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1279574510430112&ev=PageView&noscript=1"/>
-</noscript>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1279574510430112&ev=PageView&noscript=1"
+/></noscript>
 <!-- End Meta Pixel Code -->
 
-<style>
-body{
-margin:0;
-font-family: 'Poppins', Arial, sans-serif;
-background:
-linear-gradient(180deg, rgba(0,0,0,0.85), rgba(0,0,0,0.9)),
-url('img/BG1.jpeg');
-background-size:cover;
-background-position:center;
-color:#fff;
+ <style>
+@keyframes blink {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
 }
 
-.container{
-max-width:420px;
-margin:auto;
-padding:35px 16px;
-text-align:center;
-}
-
-.card{
-background:rgba(0,0,0,0.65);
-border-radius:18px;
-padding:25px 18px;
-box-shadow:0 0 25px rgba(255,215,0,0.25);
-}
-
-.logo{
-width:130px;
-margin-bottom:12px;
-}
-
-h1{
-color:#ffb300;
-letter-spacing:2px;
-margin:8px 0;
-font-size:26px;
-}
-
-.tagline{
-font-size:14px;
-opacity:0.9;
-margin-bottom:6px;
-}
-
-.sub-tag{
-font-size:13px;
-color:#ffd700;
-margin-bottom:18px;
-letter-spacing:1px;
-}
-
-.history-title{
-color:#ff4d4d;
-margin-bottom:12px;
-font-size:18px;
-}
-
-.history-box{
-background:#000;
-padding:14px;
-border-radius:12px;
-text-align:left;
-font-size:15px;
-border:1px solid #ffd700;
-box-shadow:0 0 15px rgba(255,215,0,0.5);
-margin-bottom:20px;
-}
-
-.timer-title{
-color:#ff4d4d;
-font-size:18px;
-font-weight:600;
-margin-bottom:8px;
-animation:pulse 1.5s infinite;
-}
-
-#timer{
-display:inline-block;
-padding:10px 18px;
-border-radius:30px;
-background:#111;
-border:1px solid red;
-font-size:28px;
-font-weight:700;
-color:red;
-margin-bottom:20px;
-}
-
-.join-btn{
-display:block;
-background:linear-gradient(90deg,#ffd700,#ff9800);
-color:#000;
-padding:15px;
-border-radius:35px;
-font-size:18px;
-font-weight:700;
-text-decoration:none;
-margin-bottom:20px;
-box-shadow:0 0 20px rgba(255,215,0,0.8);
-animation:pulse 2s infinite;
-}
-
-.join-btn:hover{
-transform:scale(1.03);
-}
-
-.cta-text{
-color:#4fc3f7;
-font-size:15px;
-font-weight:600;
-letter-spacing:1px;
-animation:blink 1.2s infinite;
-}
-
-@keyframes blink{
-50%{opacity:0;}
-}
-
-@keyframes pulse{
-0%{transform:scale(1);}
-50%{transform:scale(1.05);}
-100%{transform:scale(1);}
+.blink-text {
+  animation: blink 1s infinite;
 }
 </style>
+
 </head>
 
-<body>
+<body style="
+margin:0;
+font-family: Arial, sans-serif;
+background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),
+url('img/BG1.jpeg');
+background-size: cover;
+background-position: center;
+color: white;
+">
 
-<div class="container">
+<!-- MAIN WRAPPER -->
+<div style="
+max-width: 420px;
+margin: auto;
+padding: 30px 15px;
+text-align: center;
+">
 
-<div class="card">
+<!-- ================= EDIT SECTION START ================= -->
 
-<img src="img/circle-cropped.png" class="logo">
+<!-- LOGO -->
+<img src="img/circle-cropped.png"
+style="width:140px; margin-bottom:15px;">
 
-<h1>CRICKET 12TH MAN</h1>
+<!-- BRAND NAME -->
+<h1 style="color:#4aa8c7; letter-spacing:2px; margin:10px 0;">
+CRICKET-12TH-MAN
+</h1>
 
-<p class="tagline">🔥 Live Cricket Trading Predictions 🔥</p>
-<p class="sub-tag">KING OF REAL PROFIT</p>
+<!-- TAGLINE -->
+<p style="font-size:14px; font-family: Serif, Georgia; margin-bottom:10px; color:#ffffffcc;">
+🔥 Live match prediction for cricket trading 🔥
+</p>
+<p style="font-size:14px; font-family: Serif, Times new roman ; margin-bottom:15px; color:#ffffffcc;">
+KING OF REAL PROFIT
+</p>
+ 
+<!-- PREDICTION HISTORY -->
+<h2 style="color:red; margin-bottom:20px;">
+  MY PREVIOUS HISTORY
+</h2>
 
-<h2 class="history-title">PREVIOUS RESULTS</h2>
-
-<div class="history-box">
-• PSL 2023 : 33 / 34 Pass<br>
-• IPL 2025 : 72 / 74 Pass<br>
-• ODI World Cup : 45 / 48 Pass<br>
-• T20 World Cup : 53 / 55 Pass
+<div style="
+background:#000;
+padding:15px;
+border-radius:12px;
+text-align:left;
+font-size:16px;
+margin-bottom:25px;
+color:white;
+border:1px solid #ffd700;
+box-shadow:
+0 0 8px rgba(255,215,0,0.7),
+0 0 16px rgba(255,215,0,0.6),
+0 0 30px rgba(255,215,0,0.4);
+">
+• PSL 2023: 33/34 pass<br>
+• IPL 2025: 72/74 pass<br>
+• ODI World Cup: 45/48 pass<br>
+• T20 World Cup: 53/55 pass
 </div>
 
-<p class="timer-title">FREE JOINING CLOSES IN</p>
+ <!-- 🔴 TIMER HEADING -->
+<p class="blink-text" style="color:red; font-size:20px; font-weight:600; margin-bottom:5px;">
+  <b>FREE JOINING ENDS IN</b>
+</p>
 
-<div id="timer">00:30</div>
+<!-- 🔴 TIMER -->
+<div id="timer"
+style="
+text-align:centre;
+font-size:32px;
+font-weight:bold;
+color:red;
+margin-bottom:20px;
+">
+00:30
+</div>
+<a id="joinLink" href="https://t.me/+T4-Bw_C0pRVmNTE1">
 
-<a href="https://t.me/+T4-Bw_C0pRVmNTE1"
-onclick="fbq('track','Lead');"
-class="join-btn">
-JOIN TELEGRAM NOW
+<!-- JOIN BUTTON -->
+<a id="joinLink"
+onclick="fbq('track','Lead');" 
+href="https://t.me/+T4-Bw_C0pRVmNTE1"
+style="
+display:block;
+background:yellow;
+color:Black;
+padding:15px;
+border-radius:30px;
+font-size:18px;
+font-weight:600;
+text-decoration:none;
+margin-bottom:25px;
+box-shadow:
+0 0 8px rgba(255,215,0,0.7),
+0 0 16px rgba(255,215,0,0.6),
+0 0 30px rgba(255,215,0,0.4);
+">
+<b>CLICK TO JOIN</b>
 </a>
 
-<p class="cta-text">JOIN NOW FOR ULTIMATE WIN 💸💸</p>
+<!-- ACCURACY -->
+<h4 class="blink-text" style="color:#2196f3;" "font-size:16px;" >
+JOIN NOW FOR ULTIMTE WIN 💸💸
+</h4>
+
+
+<!-- ================= EDIT SECTION END ================= -->
 
 </div>
-</div>
-
+ 
+ <!-- ⏱ TIMER SCRIPT -->
 <script>
-document.addEventListener("DOMContentLoaded",function(){
-let timeLeft=30;
-let timer=document.getElementById("timer");
-let joinLink="https://t.me/+T4-Bw_C0pRVmNTE1";
+document.addEventListener("DOMContentLoaded", function () {
 
-let countdown=setInterval(function(){
-let seconds=timeLeft<10?"0"+timeLeft:timeLeft;
-timer.innerHTML="00:"+seconds;
+    let timeLeft = 30;
+    let timer = document.getElementById("timer");
+    let joinLink = document.getElementById("joinLink").href;
 
-if(timeLeft===0){
-clearInterval(countdown);
-fbq('track','CompleteRegistration');
-window.location.href=joinLink;
-}
-timeLeft--;
-},1000);
+    let countdown = setInterval(function () {
+
+        let seconds = timeLeft < 10 ? "0" + timeLeft : timeLeft;
+        timer.innerHTML = "00:" + seconds;
+
+        if (timeLeft === 0) {
+            clearInterval(countdown);
+         
+         // 🔴 META PIXEL EVENT ON TIMER END
+            fbq('track', 'CompleteRegistration');
+         
+            window.location.href = joinLink;
+        }
+
+        timeLeft--;
+
+    }, 1000);
+
 });
 </script>
+
 
 </body>
 </html>
