--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@ text-align:left;
 font-size:16px;
 margin-bottom:25px;
 color:white;
-border:1px solid #ffd700;
+border:1px solid #2196f3;
 box-shadow:
-0 0 8px rgba(255,215,0,0.7),
-0 0 16px rgba(255,215,0,0.6),
-0 0 30px rgba(255,215,0,0.4);
+0 0 8px rgba(33,150,243,0.7),
+0 0 16px rgba(33,150,243,0.6),
+0 0 30px rgba(33,150,243,0.4);
 ">
 • PSL 2023: 33/34 pass<br>
 • IPL 2025: 72/74 pass<br>
@@ -126,7 +126,7 @@ onclick="fbq('track','Lead');"
 href="https://t.me/+T4-Bw_C0pRVmNTE1"
 style="
 display:block;
-background:yellow;
+background:blue;
 color:Black;
 padding:15px;
 border-radius:30px;
@@ -143,7 +143,7 @@ box-shadow:
 </a>
 
 <!-- ACCURACY -->
-<h4 class="blink-text" style="color:#2196f3;" "font-size:16px;" >
+<h4 class="blink-text" style="color:#AA4A44;" "font-size:16px;" >
 JOIN NOW FOR ULTIMTE WIN 💸💸
 </h4>
 
