--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ onclick="fbq('track','Lead');"
 href="https://t.me/+T4-Bw_C0pRVmNTE1"
 style="
 display:block;
-background:blue;
-color:Black;
+background:linear-gradient(90deg,#4fc3f7,#29b6f6);
+color:#000;
 padding:15px;
 border-radius:30px;
 font-size:18px;
@@ -135,12 +135,14 @@ font-weight:600;
 text-decoration:none;
 margin-bottom:25px;
 box-shadow:
-0 0 8px rgba(255,215,0,0.7),
-0 0 16px rgba(255,215,0,0.6),
-0 0 30px rgba(255,215,0,0.4);
-">
+0 0 8px rgba(79,195,247,0.7),
+0 0 16px rgba(79,195,247,0.6),
+0 0 30px rgba(79,195,247,0.4);
+"
+>
 <b>CLICK TO JOIN</b>
 </a>
+
 
 <!-- ACCURACY -->
 <h4 class="blink-text" style="color:#AA4A44;" "font-size:16px;" >
