--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CRICKET-12TH-MAN</title>
+<title>ZARA-CRICKET-TIPS™</title>
 
 <!-- Meta Pixel Code -->
 <script>
@@ -44,7 +44,7 @@ src="https://www.facebook.com/tr?id=1279574510430112&ev=PageView&noscript=1"
 margin:0;
 font-family: Arial, sans-serif;
 background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),
-url('img/BG1.jpeg');
+url('img/Bckground .jpeg');
 background-size: cover;
 background-position: center;
 color: white;
@@ -61,25 +61,25 @@ text-align: center;
 <!-- ================= EDIT SECTION START ================= -->
 
 <!-- LOGO -->
-<img src="img/circle-cropped.png"
+<img src="img/logo.png"
 style="width:140px; margin-bottom:15px;">
 
 <!-- BRAND NAME -->
 <h1 style="color:#4aa8c7; letter-spacing:2px; margin:10px 0;">
-CRICKET-12TH-MAN
+ZARA-CRICKET-TIPS™
 </h1>
 
 <!-- TAGLINE -->
 <p style="font-size:14px; font-family: Serif, Georgia; margin-bottom:10px; color:#ffffffcc;">
-🔥 Live match prediction for cricket trading 🔥
+⚡ Ball-by-Ball Analysis | Real-Time Prediction 
 </p>
 <p style="font-size:14px; font-family: Serif, Times new roman ; margin-bottom:15px; color:#ffffffcc;">
-KING OF REAL PROFIT
+QUEEN OF REAL PROFIT
 </p>
  
 <!-- PREDICTION HISTORY -->
 <h2 style="color:red; margin-bottom:20px;">
-  MY PREVIOUS HISTORY
+  MY PREDICTIONS
 </h2>
 
 <div style="
@@ -118,12 +118,12 @@ margin-bottom:20px;
 ">
 00:30
 </div>
-<a id="joinLink" href="https://t.me/+T4-Bw_C0pRVmNTE1">
+<a id="joinLink" href="https://t.me/+uOm5hA0JZ_YwZTRl">
 
 <!-- JOIN BUTTON -->
 <a id="joinLink"
 onclick="fbq('track','Lead');" 
-href="https://t.me/+T4-Bw_C0pRVmNTE1"
+href="https://t.me/+uOm5hA0JZ_YwZTRl"
 style="
 display:block;
 background:linear-gradient(90deg,#4fc3f7,#29b6f6);
